--- a/ui-chat/src/app/globals.css
+++ b/ui-chat/src/app/globals.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@import "preline/variants.css";
+@source "../../node_modules/preline/dist/*.js";
+/* Plugins */
+@plugin "@tailwindcss/forms";
 
 :root {
   --background: #ffffff;
