--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "preline/variants.css";
+@import 'tailwindcss';
+@import 'preline/variants.css';
 @source "../../node_modules/preline/dist/*.js";
 /* Plugins */
 @plugin "@tailwindcss/forms";
